--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+//    compileSdkVersion 28
+    compileSdkVersion 21
     buildToolsVersion '25.0.2'
     defaultConfig {
         // applicationId 'com.jensdriller.contentproviderhelper'
         applicationId 'de.k3b.android.contentproviderhelper'
         // applicationId 'de.k3b.android.contentproviderhelper.dev'
         minSdkVersion 8
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 21
-        versionCode 5
+        versionCode 6
 		
 		// v1.3     (3)
 		// v1.3.1   (4) (fdroid does not build yet with gradle-3.5 21.4.2017)
 		// v1.3.1.1 (5) (gradle-3.3 25.4.2017)
+        // v1.3.1.2 (6) (gradle-6.7 25.10.2022)
         versionName "1.3.1.1"
     }
     buildTypes {
@@ -35,10 +38,13 @@ android {
     }
     productFlavors {
     }
+    namespace 'com.jensdriller.contentproviderhelper'
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.2'
-    compile 'com.android.support:appcompat-v7:21.0.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api 'com.android.support:support-v4:21.0.2'
+    api 'com.android.support:appcompat-v7:21.0.2'
+//  api 'androidx.legacy:legacy-support-v4:1.0.0'
+//  api 'androidx.appcompat:appcompat:1.0.2'
 }
