--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
-//    compileSdkVersion 28
-    compileSdkVersion 21
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 32
+
     defaultConfig {
         // applicationId 'com.jensdriller.contentproviderhelper'
         applicationId 'de.k3b.android.contentproviderhelper'
         // applicationId 'de.k3b.android.contentproviderhelper.dev'
-        minSdkVersion 8
+        minSdkVersion 14
         //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 21
+        targetSdkVersion 29
         versionCode 6
 		
 		// v1.3     (3)
 		// v1.3.1   (4) (fdroid does not build yet with gradle-3.5 21.4.2017)
 		// v1.3.1.1 (5) (gradle-3.3 25.4.2017)
         // v1.3.1.2 (6) (gradle-6.7 25.10.2022)
-        versionName "1.3.1.1"
+        versionName "1.3.2"
     }
     buildTypes {
         debug {
@@ -33,8 +32,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     productFlavors {
     }
@@ -43,8 +42,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.android.support:support-v4:21.0.2'
-    api 'com.android.support:appcompat-v7:21.0.2'
-//  api 'androidx.legacy:legacy-support-v4:1.0.0'
-//  api 'androidx.appcompat:appcompat:1.0.2'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.fragment:fragment:1.5.4'
 }
